--- a/style.css
+++ b/style.css
@@ -116,9 +116,9 @@ body {
 
 .contenedor .boton:nth-child(1)::before,
 .contenedor .boton:nth-child(1)::after {
-    background: #1eff45;
-    box-shadow: 0 0 5px #1eff45,
-    0 0 15px #1eff45,
-    0 0 30px #1eff45,
-    0 0 60px #1eff45;
+    background: #00ffea;
+    box-shadow: 0 0 5px #00ffea,
+    0 0 15px #00ffea,
+    0 0 30px #00ffea,
+    0 0 60px #00ffea;
 }
